# page-analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: __init__.py  app.py  db.py  db_works.py  url_parser.py  validator.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
